--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.btn {
+  position: relative;
+  align-items: center;
+  top: 50%;
+  /* transform: translateY(-50%); */
+  font-size: calc(10px + 2vmin);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
