--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -32,8 +32,10 @@
   position: relative;
   align-items: center;
   top: 50%;
-  /* transform: translateY(-50%); */
-  font-size: calc(10px + 2vmin);
+  transform: translateY(50%);
+  font-size: calc(5px + 2vmin); 
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 @keyframes App-logo-spin {
